@@ -1,5 +1,3 @@
-Remove Distribution::getCenteredMoment
-Remove IterativeMoments::getCenteredMoments
 Drop deprecated GeneralLinearModelAlgorithm | KrigingAlgorithm ctors for 1.21
 Drop deprecated Drawable.draw|clean & Graph.draw|clean|getRCommand|makeR*|GetExtensionMap methods
 Drop deprecated GaussianProcess.GIBBS
