@@ -2899,12 +2899,6 @@ Point DistributionImplementation::getCentralMoment(const UnsignedInteger n) cons
   return getShiftedMoment(n, getMean());
 }
 
-Point DistributionImplementation::getCenteredMoment(const UnsignedInteger n) const
-{
-  LOGWARN(OSS() << "Distribution::getCenteredMoment is deprecated, use getCentralMoment");
-  return getCentralMoment(n);
-}
-
 /* Compute the covariance of the distribution */
 void DistributionImplementation::computeCovariance() const
 {
